// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme provider Should override theme with hoc 1`] = `
<_default
  theme={
    Object {
      "palette": Object {
        "accent": "red",
      },
    }
  }
>
  <Component>
    <Component
      theme={
        Object {
          "currentPalette": Object {
            "accent": "red",
            "disabled": Object {
              "primary": "#9BA1A5",
              "secondary": "#c7c8c9",
            },
            "primary": "#ededed",
            "secondary": "#bfbfbf",
            "text": Object {
              "primary": "#333333",
              "secondary": "#f2f2f2",
            },
          },
          "palette": Object {
            "accent": "red",
            "disabled": Object {
              "primary": "#9BA1A5",
              "secondary": "#c7c8c9",
            },
            "primary": "#ededed",
            "secondary": "#bfbfbf",
            "text": Object {
              "primary": "#333333",
              "secondary": "#f2f2f2",
            },
          },
          "paletteDark": Object {
            "accent": "#b626e2",
            "disabled": Object {
              "primary": "#9BA1A5",
              "secondary": "#c7c8c9",
            },
            "primary": "#494949",
            "secondary": "#727272",
            "text": Object {
              "primary": "#f2f2f2",
              "secondary": "#2f2f2f",
            },
          },
          "typography": Object {
            "fontSize": Object {
              "big": 27,
              "medium": 25,
              "normal": 20,
              "small": 15,
            },
            "primaryFont": undefined,
          },
        }
      }
    >
      <View>
        <View />
      </View>
    </Component>
  </Component>
</_default>
`;

exports[`Theme provider Should override theme with hook 1`] = `
<ContextProvider
  value={
    Object {
      "currentPalette": Object {
        "accent": "red",
        "disabled": Object {
          "primary": "#9BA1A5",
          "secondary": "#c7c8c9",
        },
        "primary": "#ededed",
        "secondary": "#bfbfbf",
        "text": Object {
          "primary": "#333333",
          "secondary": "#f2f2f2",
        },
      },
      "palette": Object {
        "accent": "red",
        "disabled": Object {
          "primary": "#9BA1A5",
          "secondary": "#c7c8c9",
        },
        "primary": "#ededed",
        "secondary": "#bfbfbf",
        "text": Object {
          "primary": "#333333",
          "secondary": "#f2f2f2",
        },
      },
      "paletteDark": Object {
        "accent": "#b626e2",
        "disabled": Object {
          "primary": "#9BA1A5",
          "secondary": "#c7c8c9",
        },
        "primary": "#494949",
        "secondary": "#727272",
        "text": Object {
          "primary": "#f2f2f2",
          "secondary": "#2f2f2f",
        },
      },
      "typography": Object {
        "fontSize": Object {
          "big": 27,
          "medium": 25,
          "normal": 20,
          "small": 15,
        },
        "primaryFont": undefined,
      },
    }
  }
>
  <Component />
</ContextProvider>
`;
